2013-08-23  Andreas Grapentin  <andreas@grapentin.org>

	* finalizing first release candidate of graprof-0.5